<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/background_color"
    android:backgroundTintMode="src_atop"
    android:background="@drawable/screen_background">

    <ImageView
        android:id="@+id/question_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_group_questions"/>

    <TextView
        android:id="@+id/current_affairs_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_icon"
        android:layout_marginTop="40dp"
        android:textSize="18sp"
        android:textColor="@color/end_color"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:text="@string/current_affairs"/>

    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_affairs_text"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:text="@string/sign_in_text"/>

    <EditText
        android:id="@+id/edit_full_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_text"
        android:layout_marginTop="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edit_text_bg"
        android:elevation="15dp"
        android:drawableStart="@drawable/ic_baseline_person"
        android:hint="@string/full_name"
        android:textColorHint="@color/end_color"
        android:textColor="@color/black"
        android:padding="12dp"
        android:inputType="text"
        android:drawablePadding="@dimen/margin_20dp"/>

    <EditText
        android:id="@+id/edit_phone_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_full_name"
        android:layout_marginTop="15dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edit_text_bg"
        android:elevation="15dp"
        android:drawableStart="@drawable/ic_baseline_phone"
        android:hint="@string/phone_number"
        android:textColorHint="@color/end_color"
        android:textColor="@color/black"
        android:padding="12dp"
        android:inputType="phone"
        android:drawablePadding="@dimen/margin_20dp"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_phone_number"
        android:layout_marginTop="15dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edit_text_bg"
        android:elevation="15dp"
        android:drawableStart="@drawable/ic_baseline_email"
        android:hint="@string/enter_email"
        android:textColorHint="@color/end_color"
        android:textColor="@color/black"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:drawablePadding="@dimen/margin_20dp"/>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        android:layout_marginTop="15dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edit_text_bg"
        android:elevation="15dp"
        android:drawableStart="@drawable/ic_baseline_lock"
        android:hint="@string/password"
        android:textColorHint="@color/end_color"
        android:textColor="@color/black"
        android:padding="12dp"
        android:inputType="textPassword"
        android:drawablePadding="@dimen/margin_20dp"/>

    <Button
        android:id="@+id/begin_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/register"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_20dp"
        android:background="@drawable/button_bg"/>

    <TextView
        android:id="@+id/no_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/black"
        android:layout_marginBottom="90dp"
        android:text="@string/already_have_an_acct"
        android:textStyle="italic"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/margin_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_account_text"
        android:background="@drawable/register_bg"
        android:text="@string/sign_in"
        android:textColor="@color/end_color"/>









</androidx.constraintlayout.widget.ConstraintLayout>